name:         HartreeFock
version:      0.2.0.0
synopsis:     Hartree-Fock SCF method for ab-initio computational chemistry. 
description:  Hartree-Fock Self Consistent Field method is the foundation of modern ab-inito computational chemistry. 
              This package aims to overcome many years of painful Fortran programming while bringing as much 
              performance as classical packages yet leveraging new computing paradigms upon modern Haskell features. 
category:     computational chemistry
author:       Felipe Zapata, Angel Alvarez, Alessio Valentini
maintainer:   a.alvarez@uah.es, felipe.zapata@edu.uah.es ,  alessio.valentini@uah.es 
homepage:     http://www2.uah.es/resmol
license:      BSD3
license-file: LICENSE
build-type:   Simple
cabal-version: >= 1.8


Flag Debug
    Description: Enable debug support
    Default:False

Library
  ghc-options:
    -Odph
    -rtsopts
    -fno-liberate-case
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
    -fllvm
    -optlo-O3
    -auto-all
     -caf-all


  build-depends:
    async,
    base,
    Cabal,
    containers,
    deepseq,
    directory,    
    erf,    
    filepath,
    gamma,
    GaussQuadIntegration,
    hmatrix,
    hmatrix-repa,
    mtl,    
    parallel,
    parsec,
    repa,
    repa-algorithms,
    vector,
    vector-strategies    
  
  hs-source-dirs: HartreeFock
  other-modules: BasisOrthogonalization, Boys, DIIS, EigenHmatrix, GaussElimination, GlobalTypes, IntegralsEvaluation, Jacobi
  exposed-modules: Derivatives, HartreeFock, LinearAlgebra, Logger


executable HsFock
  ghc-options:
    -rtsopts
    -threaded
    -auto-all



  build-depends:
      async        == 2.0.*  
    , base
    , Cabal
    , containers
    , deepseq == 1.3.*
    , directory    
    , EitherT      == 0.2.*
    , erf    
    , filepath
    , HartreeFock    
    , hmatrix
    , hmatrix-repa == 0.1.2.*
    , mtl
    , parallel
    , process     
    , repa    
    , repa-algorithms
    , transformers == 0.3.*    
    , vector       
  main-is: Main.hs
  hs-source-dirs: HsFock
  other-modules: 

