name:         HartreeFock
version:      0.1.0.0
synopsis:     Hartree-Fock SCF method for ab-initio computational chemistry. 
description:  Hartree-Fock Self Consistent Field method is the foundation of modern ab-inito computational chemistry. 
              This package aims to overcome many years of painful Fortran programming while bringing as much 
              performance as classical packages yet leveraging new computing paradigms upon modern Haskell features. 
category:     computational chemistry
author:       felipe zapata, angel alvarez, alessio valentini
maintainer:   tifonzafel@gmail.com
homepage:     http://www2.uah.es/resmol
license:      BSD3
license-file: LICENSE
build-type:   Simple
cabal-version: >= 1.10


Flag Debug
    Description: Enable debug support
    Default:False

Library
  ghc-options:
    -Odph
    -rtsopts                    
    -fno-liberate-case
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
    -- -fllvm
    -optlo-O3
    -threaded

  build-depends:
      async
    , attoparsec
    , base   == 4.8.*        
    , bytestring
    , Cabal
    , cereal          
    , cmdargs
    , containers
    , deepseq
    , directory
    , either
    , erf
    , filepath
    , gamma
    , hmatrix
    , mtl
    , monad-memo 
    , parallel
    , parsec
    , primitive
    , process
    , repa     == 3.4.*
    , repa-algorithms
    , vector   == 0.10.* 
    , vector-algorithms

  other-extensions:
        BangPatterns
        DeriveDataTypeable

  exposed-modules: 
        Science.QuantumChemistry.ConcurrencyTools
        Science.QuantumChemistry.HartreeFock
        Science.QuantumChemistry.HsFock
        Science.QuantumChemistry.Integrals
        Science.QuantumChemistry.NumericalTools
        Science.QuantumChemistry.ParsecTools

  default-language:    Haskell2010


executable hsFock
  Main-is: Main.hs
  
  ghc-options:
    -Odph
    -rtsopts
    -fno-liberate-case
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
--    -fllvm
    -optlo-O3
    -threaded

  build-depends:
      async 
    , attoparsec
    , base == 4.8.*
    , bytestring
    , Cabal
    , cereal               
    , cmdargs
    , containers
    , deepseq
    , directory
    , either
    , erf
    , filepath
    , gamma
    , hmatrix
    , mtl
    , monad-memo
    , parallel
    , parsec
    , primitive
    , process
    , repa            == 3.4.*
    , repa-algorithms == 3.4.*
    , vector          == 0.10.*
    , vector-algorithms

  other-modules:
         Science.QuantumChemistry.BasisSet
         Science.QuantumChemistry.ConcurrencyTools.Logger
         Science.QuantumChemistry.HartreeFock.BasisOrthogonalization
         Science.QuantumChemistry.HartreeFock.Derivatives
         Science.QuantumChemistry.HartreeFock.DIIS
         Science.QuantumChemistry.HartreeFock.HartreeFock
         Science.QuantumChemistry.HsFock.Initialize
         Science.QuantumChemistry.HsFock.OptsCheck
         Science.QuantumChemistry.HsFock.Project
         Science.QuantumChemistry.HsFock.SampleProjects
         Science.QuantumChemistry.Integrals.IntegralsEvaluation 
         Science.QuantumChemistry.NumericalTools.Boys 
         Science.QuantumChemistry.NumericalTools.EigenValues
         Science.QuantumChemistry.NumericalTools.GaussElimination
         Science.QuantumChemistry.NumericalTools.JacobiMethod
         Science.QuantumChemistry.NumericalTools.JacobiMethodST
         Science.QuantumChemistry.NumericalTools.LinearAlgebra 
         Science.QuantumChemistry.NumericalTools.VectorTools
         Science.QuantumChemistry.ParsecTools

         

  default-language:    Haskell2010

-- executable ProfileHS
--   Main-is: HsFock.hs
  
--   ghc-options:
--     -Odph
--     -rtsopts
--     -fno-liberate-case
--     -funfolding-use-threshold1000
--     -funfolding-keeness-factor1000
--     -fllvm
--     -optlo-O3              
--     -eventlog
--     -caf-all          
--     -auto-all
                              
--   build-depends:
--       async
--     , base          >= 4.5
--     , Cabal  
--     , containers
--     , deepseq
--     , directory
--     , either
--     , erf
--     , filepath
--     , gamma
--     , hmatrix
--     , mtl
--     , monad-memo
--     , parallel
--     , parsec
--     , primitive
--     , process
--     , repa
--     , repa-algorithms
--     , transformers
--     , vector
--     , vector-algorithms

--   other-modules: 
--          Science.QuantumChemistry.ConcurrencyTools.Logger
--          Science.QuantumChemistry.HartreeFock.BasisOrthogonalization
--          Science.QuantumChemistry.HartreeFock.Derivatives
--          Science.QuantumChemistry.HartreeFock.DIIS
--          Science.QuantumChemistry.HartreeFock.HartreeFock
--          Science.QuantumChemistry.HsFock.Input
--          Science.QuantumChemistry.HsFock.Options
--          Science.QuantumChemistry.HsFock.OptsCheck
--          Science.QuantumChemistry.HsFock.Project
--          Science.QuantumChemistry.HsFock.SampleProjects
--          Science.QuantumChemistry.Integrals.IntegralsEvaluation 
--          Science.QuantumChemistry.NumericalTools.Boys 
--          Science.QuantumChemistry.NumericalTools.EigenValues
--          Science.QuantumChemistry.NumericalTools.GaussElimination
--          Science.QuantumChemistry.NumericalTools.JacobiMethod
--          Science.QuantumChemistry.NumericalTools.JacobiMethodST
--          Science.QuantumChemistry.NumericalTools.LinearAlgebra 
--          Science.QuantumChemistry.NumericalTools.VectorTools
--          Science.QuantumChemistry.ParsecTools.BasisParser 
--          Science.QuantumChemistry.ParsecTools.ParsecNumbers
--          Science.QuantumChemistry.ParsecTools.ParsecText
         

--   default-language:    Haskell2010



